--- a/Test/docker-compose.yaml
+++ b/Test/docker-compose.yaml
@@ -1,6 +1,7 @@
 version: '2'
 services:
   zookeeper:
+    #TODO: need to push this image to Artifactory
     image: dtr.dev.cray.com/confluentinc/cp-zookeeper:5.4.0
     hostname: zookeeper
     container_name: zookeeper
@@ -10,6 +11,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
   kafka:
+    #TODO: need to push this image to Artifactory
     image: dtr.dev.cray.com/confluentinc/cp-kafka:5.4.0
     hostname: kafka
     container_name: kafka
