--- a/Test/docker-compose.yaml
+++ b/Test/docker-compose.yaml
@@ -1,8 +1,7 @@
 version: '2'
 services:
   zookeeper:
-    #TODO: need to push this image to Artifactory
-    image: dtr.dev.cray.com/confluentinc/cp-zookeeper:5.4.0
+    image: arti.dev.cray.com/third-party-docker-stable-local/confluentinc/cp-zookeeper:6.1.1
     hostname: zookeeper
     container_name: zookeeper
     ports:
@@ -11,8 +10,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
   kafka:
-    #TODO: need to push this image to Artifactory
-    image: dtr.dev.cray.com/confluentinc/cp-kafka:5.4.0
+    image: arti.dev.cray.com/third-party-docker-stable-local/confluentinc/cp-kafka:6.1.1
     hostname: kafka
     container_name: kafka
     depends_on:
