converted to github

--- a/Dockerfile.coverage
+++ b/Dockerfile.coverage
@@ -26,4 +26,4 @@ FROM cray/hms-trs-app-api-build-base
 
 # Run coverage.
 RUN set -ex \
-    && go test -cover -v stash.us.cray.com/HMS/hms-trs-app-api/pkg/./...
+    && go test -cover -v github.com/Cray-HPE/hms-trs-app-api/pkg/./...
