--- a/Dockerfile.unittesting
+++ b/Dockerfile.unittesting
@@ -26,4 +26,4 @@ FROM cray/hms-trs-app-api-build-base
 
 # Run any tests that might be present.
 RUN set -ex \
-    && go test -v $GOPATH/src/stash.us.cray.com/HMS/hms-trs-app-api/pkg/./...
+    && go test -v $GOPATH/src/github.com/Cray-HPE/hms-trs-app-api/pkg/./...
