--- a/Dockerfile.integration
+++ b/Dockerfile.integration
@@ -35,15 +35,15 @@ FROM build-base AS builder
 
 RUN go env -w GO111MODULE=auto
 
-COPY pkg $GOPATH/src/stash.us.cray.com/HMS/hms-trs-app-api/pkg
-COPY vendor $GOPATH/src/stash.us.cray.com/HMS/hms-trs-app-api/vendor
+COPY pkg $GOPATH/src/github.com/Cray-HPE/hms-trs-app-api/pkg
+COPY vendor $GOPATH/src/github.com/Cray-HPE/hms-trs-app-api/vendor
 
 
 FROM builder AS runner
-COPY Test $GOPATH/src/stash.us.cray.com/HMS/hms-trs-app-api/Test
+COPY Test $GOPATH/src/github.com/Cray-HPE/hms-trs-app-api/Test
 
 ENV LOG_LEVEL=TRACE
 
 RUN set -e \
-    && go build -v -i -o $GOPATH/bin/testApp stash.us.cray.com/HMS/hms-trs-app-api/Test && bin/testApp
+    && go build -v -i -o $GOPATH/bin/testApp github.com/Cray-HPE/hms-trs-app-api/Test && bin/testApp
 
