--- a/.github/workflows/run_integration_test.yaml
+++ b/.github/workflows/run_integration_test.yaml
@@ -1,7 +1,7 @@
-#!/usr/bin/env bash
+#
 # MIT License
 #
-# (C) Copyright [2021] Hewlett Packard Enterprise Development LP
+# (C) Copyright 2022 Hewlett Packard Enterprise Development LP
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
 # copy of this software and associated documentation files (the "Software"),
@@ -20,8 +20,11 @@
 # OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
 # ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 # OTHER DEALINGS IN THE SOFTWARE.
-
-# Build the build base image
-docker build -t cray/hms-trs-app-api-build-base -f Dockerfile.build-base .
-
-docker build -t cray/hms-trs-app-api-coverage -f Dockerfile.coverage .
+#
+name: Run Integration Tests
+on: [push, pull_request]
+jobs:
+  run_integration_test:
+    uses: Cray-HPE/hms-build-scripts/.github/workflows/run_integration_test.yaml@master
+    with:
+      runs-on: ubuntu-latest
