--- a/.github/workflows/run_integration_test.yaml
+++ b/.github/workflows/run_integration_test.yaml
@@ -22,9 +22,9 @@
 # OTHER DEALINGS IN THE SOFTWARE.
 #
 name: Run Integration Tests
-on: [push, pull_request]
+on: [push, workflow_dispatch, pull_request]
 jobs:
   run_integration_test:
-    uses: Cray-HPE/hms-build-scripts/.github/workflows/run_integration_test.yaml@master
+    uses: Cray-HPE/hms-build-image-workflows/.github/workflows/run_integration_test.yaml@v1
     with:
       runs-on: ubuntu-latest
