--- a/.github/workflows/run_integration_test.yaml
+++ b/.github/workflows/run_integration_test.yaml
@@ -25,6 +25,7 @@ name: Run Integration Tests
 on: [push, workflow_dispatch, pull_request]
 jobs:
   run_integration_test:
-    uses: Cray-HPE/hms-build-image-workflows/.github/workflows/run_integration_test.yaml@v1
+    uses: Cray-HPE/hms-build-image-workflows/.github/workflows/run_integration_test.yaml@v2
     with:
       runs-on: ubuntu-latest
+    secrets: inherit
